--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="col-md-4 ">
                 <div class="withdraw status">
                     <h5>withdraw</h5>
-                    <h2>$ <span id="currentWithDraw">00</span> </h2>
+                    <h2>$ <span id="currentWithdraw">00</span> </h2>
                 </div>
 
             </div>
